<resources>
    <string name="app_name">Meno</string>

    <string name="title_add_expense">Add Expense</string>
    <string name="title_categories">Categories</string>
    <string name="title_expense_list">Expenses</string>
    <string name="title_charts">Charts</string>
    <string name="title_rename_delete_category">Rename or delete?</string>
    <string name="title_delete_expense_dialog">Do you want to delete this expense?</string>

    <string name="hint_category">Category</string>
    <string name="hint_cost">Cost</string>
    <string name="hint_date">Date (Default: today)</string>
    <string name="hint_rename_category">Rename category</string>
    <string name="hint_select_month">Select month</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_rename">Rename</string>
    <string name="button_delete">Delete</string>

    <string name="toast_expense_add_success">Expense added successfully.</string>
    <string name="toast_expense_add_failure_empty_fields">Some fields are empty!</string>
    <string name="toast_expense_add_failure_invalid_cost">Invalid cost!</string>
    <string name="toast_expense_add_failure_invalid_date">Invalid date! Use calendar selection or format as YYYY:MM:DD</string>
    <string name="toast_expense_add_failure_invalid_category">Invalid category! Please select from dropdown</string>
    <string name="toast_category_add_success">Category added successfully</string>
    <string name="toast_category_add_failure_duplicate">Category with similar name exists!</string>
    <string name="toast_category_add_failure_empty">Category field is empty!</string>
    <string name="toast_category_delete_success">Category deleted successfully.</string>
    <string name="toast_category_delete_failure_referenced">Category could NOT be deleted! Some expenses use it.</string>
    <string name="toast_category_rename_success">Category renamed successfully.</string>
    <string name="toast_category_rename_failure_duplicate">Category with similar name exists!</string>
    <string name="toast_expense_get_failure">Could not retrieve all expenses.</string>


    <string name="table_header_category">Category</string>
    <string name="table_header_cost">Cost</string>
    <string name="table_header_date">Date</string>

    <string name="id_date_picker">date_picker</string>

    <string name="get_started_heading">Get started with Meno!</string>
    <string name="get_started_step_1">Step 1: Create some categories to tag your expenses</string>
    <string name="get_started_step_2">Step 2: Create an expense</string>
    <string name="get_started_step_3">Step 3: View your expenses in the list or pie chart.</string>
</resources>
