<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center" android:orientation="vertical">
    <EditText
        android:id="@+id/renameCategoryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_rename_category"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/renameCategoryText"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:id="@+id/dialog_edit_category_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/button_cancel" />

        <com.github.anthogis.meno.statefulbutton.StatefulButton
            android:id="@+id/dialog_edit_category_execute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/button_delete" />
    </LinearLayout>


</RelativeLayout>