<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">

        <com.github.anthogis.meno.views.ExpenseCategorySpinner
            android:id="@+id/categorySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editCostText"
            android:layout_alignRight="@+id/editCostText"
            android:ems="10"
            android:hint="@string/hint_category"
            android:spinnerMode="dropdown"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:paddingStart="0dp"
            />
        <!--
        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/editCategoryText"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_category"
            android:inputType="text"
            android:textAlignment="center" />-->

        <EditText
            android:id="@+id/editCostText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/categorySpinner"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/hint_cost"
            android:inputType="numberDecimal"
            android:paddingStart="0dp"
            />
            <!--android:nextFocusRight="@id/addExpenseButton"-->


        <EditText
            android:id="@+id/editDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editCostText"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/hint_date"
            android:inputType="date"
            android:nextFocusRight="@id/addExpenseButton"
            android:paddingStart="0dp"
            />

        <Button
            android:id="@+id/addExpenseButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editCostText"
            android:layout_alignRight="@+id/editCostText"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/editDateText"
            android:text="@string/title_add_expense" />
    </RelativeLayout>


</RelativeLayout>